manifests/global/20-observability.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
