manifests/global/21-otel-policies.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kgateway-policy-to-otel-collectors
  namespace: observability
spec:
  from:
    - group: gateway.kgateway.dev
      kind: HTTPListenerPolicy
      namespace: kgateway-system
  to:
    - group: ""
      kind: Service
      name: otel-collector-logs
    - group: ""
      kind: Service
      name: otel-collector-traces
