manifests/global/40-networkpolicy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-traffic-and-metrics
  namespace: gateway-system
spec:
  podSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: shared-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: gateway-system
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 10080
        - protocol: TCP
          port: 10443
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 19001
